app/assets/stylesheets/content_blocks/text_with_logo_block.scss
.text-with-logo-block {
  @extend %text-based-block;
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  .logo {
	  max-width: 440px;
	  width: 100%;
	  margin-left: auto;
	  margin-right: auto;
	  margin-top: 10px;
	  .placeholder {
		  padding-top: 0 !important;
		  > img {
			  position: static;
			  width: auto;
			  height: auto;
			  max-width: 100%;
		  }
	  }
  }
}
@media only screen and (max-width: $hand_max_width) {
	body.partners.partners-show {
		.content-blocks {
			> .content-block-chunk {
				display: flex;
				flex-direction: column;
				.content-block {
					&.image-block {
						order: 1;
						flex-basis: 50%;
					}
					&.text-with-logo-block {
						order: 2;
					}
				}
			}
		}
	}
}

